--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <h2>BMI Calculator</h2>
-    <label for="height">Height (cm):</label>
+    <label for="height">Height in cm:</label>
     <input class="height" type="number" id="height" placeholder="Enter height in cm">
     <div class="error" id="error"></div>
 
-    <label for="weight">Weight (kg):</label>
+    <label for="weight">Weight in kg:</label>
     <input class="weight" type="number" id="weight" placeholder="Enter weight in kg">
     <div class="error" id="error"></div>
 
